Mon Jan 28 23:13:24 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Use charset name "iso-8859-1" in lower case
	  consistently.

Thu Jan 24 08:44:24 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am: Ship jsonescape.h.

Thu Jan 24 07:21:17 GMT 2013  Olly Betts <olly@survex.com>

	* jsonescape.cc: Add missing header includes.

Thu Jan 24 03:08:39 GMT 2013  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Document $json and $jsonarray.

Thu Jan 24 02:55:53 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,jsonescape.cc,jsonescape.h,jsonesctest.cc,query.cc:
	  Add new $json and $jsonarray OmegaScript commands.

Wed Jan 09 11:53:19 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2 branch.

Fri Jan 04 02:21:05 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,docs/omegascript.rst,omindex.cc,query.cc,sample.cc,
	  sample.h: Add $truncate command to break a string after a word.

Thu Jan 03 04:44:22 GMT 2013  Olly Betts <olly@survex.com>

	* commonhelp.cc: Tweak wording about default to match other options
	  better.

Thu Jan 03 04:07:57 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: Note default size limit on files to index is unlimited.
	  Update --help to reflect that --sample-size now accepts the same
	  formats as --max-size).

Thu Jan 03 03:52:34 GMT 2013  Olly Betts <olly@survex.com>

	* omindex.cc: When generating a sample for a CSV file, limit the
	  reserved size to the CSV file size as sample_size could be set
	  really high by the user.

Thu Jan 03 03:46:46 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Tue Dec 18 04:49:41 GMT 2012  Olly Betts <olly@survex.com>

	* omindex.cc: Fix typo in previous change (2>dev/null should be
	  2>/dev/null).

Tue Dec 18 03:48:36 GMT 2012  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Extend --filter to allow commands which
	  produce HTML on stdout to be specified with it.
