@@ -1,6 +1,6 @@
 /* utf8convert.cc: convert a string to UTF-8 encoding.
  *
- * Copyright (C) 2006,2007,2008,2010 Olly Betts
+ * Copyright (C) 2006,2007,2008,2010,2013 Olly Betts
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -27,9 +27,8 @@
 #include "safeerrno.h"
 #ifdef USE_ICONV
 # include <iconv.h>
-#else
-# include <xapian.h>
 #endif
+#include <xapian.h>
 #include "strcasecmp.h"
 #include "stringutils.h"
 
@@ -50,9 +49,33 @@ convert_to_utf8(string & text, const string & charset)
 	return;
 
     char buf[1024];
+    string tmp;
 
 #ifdef USE_ICONV
-    iconv_t conv = iconv_open("UTF-8", charset.c_str());
+    iconv_t conv = (iconv_t)-1;
+    const char * p = charset.c_str();
+    if (strncasecmp(p, "iso", 3) == 0) {
+	p += 3;
+	if (*p == '-' || *p == '_' || *p == ' ') ++p;
+    }
+    if (strncmp(p, "8859", 4) == 0) {
+	p += 4;
+	if (*p == '-' || *p == '_' || *p == ' ') ++p;
+	if (strcmp(p, "1") == 0) {
+	    // Assume windows-1252 if iso-8859-1 is specified.  The only
+	    // differences are in the range 128-159 which are control characters in
+	    // iso-8859-1, and a lot of content is mislabelled.  We use our own
+	    // conversion code for this case, as GNU iconv fails if it sees one
+	    // of the unassigned code points in windows-1252, whereas it would
+	    // accept the same input as iso-8859-1, and it seems undesirable to be
+	    // rejecting input due to this behind-the-scenes character set
+	    // shenanigans.
+	    goto cp_1252;
+	}
+    }
+    if (conv == (iconv_t)-1) {
+	conv = iconv_open("UTF-8", charset.c_str());
+    }
     if (conv == (iconv_t)-1) {
 	if (charset.size() < 4 || charset[3] == '-')
 	    return;
@@ -80,26 +103,29 @@ convert_to_utf8(string & text, const string & charset)
 	if (conv == (iconv_t)-1) return;
     }
 
-    string tmp;
-
-    ICONV_INPUT_TYPE in = const_cast<char *>(text.c_str());
-    size_t in_len = text.size();
-    while (in_len) {
-	char * out = buf;
-	size_t out_len = sizeof(buf);
-	if (iconv(conv, &in, &in_len, &out, &out_len) == size_t(-1) &&
-	    errno != E2BIG) {
-	    // FIXME: how to handle this?
-	    break;
+    {
+	ICONV_INPUT_TYPE in = const_cast<char *>(text.c_str());
+	size_t in_len = text.size();
+	while (in_len) {
+	    char * out = buf;
+	    size_t out_len = sizeof(buf);
+	    if (iconv(conv, &in, &in_len, &out, &out_len) == size_t(-1) &&
+		errno != E2BIG) {
+		// FIXME: how to handle this?
+		break;
+	    }
+	    tmp.append(buf, out - buf);
 	}
-	tmp.append(buf, out - buf);
-    }
 
-    (void)iconv_close(conv);
+	(void)iconv_close(conv);
+
+	swap(text, tmp);
+	return;
+    }
+    {
 #else
     /* If we don't have iconv, handle iso-8859-1, utf-16/ucs-2,
      * utf-16be/ucs-2be, and utf-16le/ucs-2le. */
-    string tmp;
     const char * p = charset.c_str();
 
     bool utf16 = false;
@@ -181,6 +207,17 @@ convert_to_utf8(string & text, const string & charset)
 	}
 	if (start) tmp.append(buf, start);
     } else {
+	const char * q = NULL;
+	if (strncasecmp(p, "windows", 7) == 0) {
+	    q = p + 7;
+	} else if (strncasecmp(p, "cp", 2) == 0) {
+	    q = p + 2;
+	}
+	if (q) {
+	    if (*q == '-' || *q == '_' || *q == ' ') ++q;
+	    if (strcmp(q, "1252") == 0)
+		goto cp_1252;
+	}
 	if (strncasecmp(p, "iso", 3) == 0) {
 	    p += 3;
 	    if (*p == '-' || *p == '_' || *p == ' ') ++p;
@@ -189,13 +226,23 @@ convert_to_utf8(string & text, const string & charset)
 	p += 4;
 	if (*p == '-' || *p == '_' || *p == ' ') ++p;
 	if (strcmp(p, "1") != 0) return;
+#endif
+cp_1252:
 
 	// FIXME: pull this out as a standard "normalise utf-8" function?
 	tmp.reserve(text.size());
 
 	size_t start = 0;
 	for (string::const_iterator i = text.begin(); i != text.end(); ++i) {
+	    static const unsigned cp1252_to_unicode[32] = {
+		0x20ac,    129, 0x201a, 0x0192, 0x201e, 0x2026, 0x2020, 0x2021,
+		0x02c6, 0x2030, 0x0160, 0x2039, 0x0152,    141, 0x017d,    143,
+		   144, 0x2018, 0x2019, 0x201c, 0x201d, 0x2022, 0x2013, 0x2014,
+		0x02dc, 0x2122, 0x0161, 0x203a, 0x0153,    157, 0x017e, 0x0178
+	    };
 	    unsigned ch = static_cast<unsigned char>(*i);
+	    if (ch - 128 < sizeof(cp1252_to_unicode) / sizeof(*cp1252_to_unicode))
+		ch = cp1252_to_unicode[ch - 128];
 	    start += Xapian::Unicode::to_utf8(ch, buf + start);
 	    if (start >= sizeof(buf) - 4) {
 		tmp.append(buf, start);
@@ -204,7 +251,6 @@ convert_to_utf8(string & text, const string & charset)
 	}
 	if (start) tmp.append(buf, start);
     }
-#endif
 
     swap(text, tmp);
 }
